# rusty-todo

./: .gitignore  LICENSE  index.html  package-lock.json  package.json
src/: App.jsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/project/: mod.rs  projectservice.rs
src-tauri/src/store/: mainstore.rs  mod.rs  projectstore.rs  taskstore.rs  userstore.rs
src-tauri/src/tasks/: mod.rs  taskservice.rs
src-tauri/src/user/: mod.rs  userservice.rs
src/components/: AppRouter.jsx  DatePanel.jsx  ThemeProvider.jsx
src/components/tasks/: AddTask.jsx  ProjectItem.jsx  ProjectTitle.jsx  ProjectsScroll.jsx  SortSelect.jsx  TaksPanel.jsx  TaskItem.jsx  TasksPanel.jsx  UserPanel.jsx
src/context/: context.js
src/hooks/: useFetching.js
src/messages/: message.js
src/pages/: Register.jsx  Todolist.jsx  login.jsx
src/router/: router.jsx
src/styles/: auth.module.css  todo.module.css
