[package]
name = "rusty-todo"
version = "0.0.0"
description = "A Tauri App"
authors = ["AlFuzi"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
pwhash = "1.0"
anyhow = "1.0"
dotenv = "0.15"
tokio = {version = "1.32", features = ["full"] }
uuid = {version = "1.4", features = ["v4"] }
sqlx = {version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0"
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
